# kindle_to_notion

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: clippings.rs  lib.rs  main.rs  notion.rs
src/snapshots/: kindle_to_notion__clippings__tests__all_clippings_parsing.snap  kindle_to_notion__clippings__tests__parse_location_2023_02.snap  kindle_to_notion__clippings__tests__parse_single_clip_2023_02_format.snap  kindle_to_notion__clippings__tests__parse_single_clip_parenthesis_in_title.snap  kindle_to_notion__clippings__tests__parse_single_clip_simple.snap
tests/data/: clippings.txt
