[package]
name = "kindle_to_notion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = "4.0.32"
futures = "0.3.25"
hyper = "0.14.23"
nom = "7.1.1"
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0.151", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.23.0", features = ["yaml"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
